--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script src="jquery.min.js”></script>
+<script src="jquery-3.6.0.min.js”></script>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 
 <p>Hello World</p>
