--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script src="jsw13.github.io/jquery-3.6.0.min.js”></script>
+<script src="https://jsw13.github.io/jquery-3.6.0.min.js”></script>
 
 
 <p>Hello World</p>
