--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<script src="https://jsw13.github.io/jquery.min.js”></script>
+<p>Hello World</p>
+
+<script src="jquery.min.js”></script>
 
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 
-<p>Hello World</p>
+
