--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<p>Hello World</p>
+Hello World
 
 <script src="jquery.min.js”></script>
-
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
-
-
