--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 Hello World
 
-<script src="https://jsw13.github.io/jquery.min.js”></script>
+<script src="https://jsw13.github.io/jquery.min.js"></script>
